dec-78: swagger
